--- a/css/agency.css
+++ b/css/agency.css
@@ -1,6 +1,6 @@
 /*!
  * Start Bootstrap - Agency v3.3.7+1 (http://startbootstrap.com/template-overviews/agency)
- * Copyright 2013-2016 Start Bootstrap
+ * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 body {
@@ -11,7 +11,7 @@ body {
   color: #777777;
 }
 .text-primary {
-  color: #fed136;
+  color: #07874a;
 }
 p {
   font-size: 14px;
@@ -28,13 +28,13 @@ a.active {
   outline: none;
 }
 a {
-  color: #fed136;
+  color: #07874a;
 }
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #fec503;
+  color: #04572f;
 }
 h1,
 h2,
@@ -57,8 +57,8 @@ h6 {
 }
 .btn-primary {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #07874a;
+  border-color: #07874a;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -69,8 +69,8 @@ h6 {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #04572f;
+  border-color: #044d2a;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -92,17 +92,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #07874a;
+  border-color: #07874a;
 }
 .btn-primary .badge {
-  color: #fed136;
+  color: #07874a;
   background-color: white;
 }
 .btn-xl {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #07874a;
+  border-color: #07874a;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -116,8 +116,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #04572f;
+  border-color: #044d2a;
 }
 .btn-xl:active,
 .btn-xl.active,
@@ -139,41 +139,57 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #07874a;
+  border-color: #07874a;
 }
 .btn-xl .badge {
-  color: #fed136;
+  color: #07874a;
   background-color: white;
+}
+#mainNav {
+  max-height: 70px;
+}
+.navbar-brand {
+  position: relative;
+  padding: 0;
+  font-size: 18px;
+  line-height: 20px;
+  top: -30px;
+  left: -15px;
+  width: 150px;
+  height: 180px;
+  box-shadow: 4px 4px 2px #222;
 }
 .navbar-custom {
   background-color: #222222;
   border-color: transparent;
 }
 .navbar-custom .navbar-brand {
-  color: #fed136;
-  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+  color: #07874a;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: #fec503;
+  color: #04572f;
 }
 .navbar-custom .navbar-collapse {
+  position: relative;
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-custom .navbar-toggle {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #07874a;
+  border-color: #07874a;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
-  color: white;
+  color: #07874a;
   font-size: 12px;
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #fed136;
+  background-color: white;
 }
 .navbar-custom .nav li a {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -184,18 +200,18 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #fed136;
+  color: #07874a;
   outline: none;
 }
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #fed136;
+  background-color: #07874a;
 }
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #fec503;
+  background-color: #04572f;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -223,10 +239,18 @@ fieldset[disabled] .btn-xl.active {
   }
   .navbar-custom.affix .navbar-brand {
     font-size: 1.5em;
+    width: 115px;
+    height: 143px;
+    top: -10px;
+  }
+  .navbar-custom.affix .navbar-brand .logo_overlay {
+    width: 115px;
+    height: 143px;
+    padding-top: 113px;
   }
 }
 header {
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/header-bg2.png');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -240,20 +264,28 @@ header {
 header .intro-text {
   padding-top: 100px;
   padding-bottom: 50px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
-header .intro-text .intro-lead-in {
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-style: italic;
-  font-size: 22px;
-  line-height: 22px;
-  margin-bottom: 25px;
+header .intro-text .intro-heading-box {
+  background: rgba(1, 1, 1, 0.5);
+  padding: 35px;
 }
-header .intro-text .intro-heading {
+header .intro-text .intro-heading-box .intro-heading {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
+  letter-spacing: .6em;
   font-weight: 700;
   font-size: 50px;
   line-height: 50px;
+  margin-bottom: 25px;
+}
+header .intro-text .intro-heading-box .intro-lead-in {
+  font-family: "Exo", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  letter-spacing: 0.25em;
+  font-size: 22px;
+  line-height: 22px;
   margin-bottom: 25px;
 }
 @media (min-width: 768px) {
@@ -262,8 +294,7 @@ header .intro-text .intro-heading {
     padding-bottom: 200px;
   }
   header .intro-text .intro-lead-in {
-    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-style: italic;
+    font-family: "Exo", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 40px;
     line-height: 40px;
     margin-bottom: 25px;
@@ -277,6 +308,17 @@ header .intro-text .intro-heading {
     margin-bottom: 50px;
   }
 }
+.logo_overlay {
+  background-image: url(../img/logos/circles_logo.jpg);
+  background-size: 100%;
+  position: relative;
+  width: 150px;
+  height: 180px;
+  z-index: -1;
+  border-bottom: 30px solid white;
+  padding-top: 150px;
+  padding-left: 13px;
+}
 section {
   padding: 100px 0;
 }
@@ -287,11 +329,11 @@ section h2.section-heading {
 }
 section h3.section-subheading {
   font-size: 16px;
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Exo", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: none;
-  font-style: italic;
   font-weight: 400;
   margin-bottom: 75px;
+  line-height: 1.6em;
 }
 @media (min-width: 768px) {
   section {
@@ -313,7 +355,7 @@ section h3.section-subheading {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(7, 135, 74, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -354,7 +396,7 @@ section h3.section-subheading {
   margin: 0;
 }
 #portfolio .portfolio-item .portfolio-caption p {
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Exo", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: italic;
   font-size: 16px;
   margin: 0;
@@ -421,7 +463,7 @@ section h3.section-subheading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: #fed136;
+  background-color: #07874a;
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
@@ -576,7 +618,7 @@ section#contact .form-group textarea.form-control {
   height: 236px;
 }
 section#contact .form-control:focus {
-  border-color: #fed136;
+  border-color: #07874a;
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
@@ -645,7 +687,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #fed136;
+  background-color: #07874a;
 }
 .btn:focus,
 .btn:active,
@@ -677,7 +719,7 @@ ul.social-buttons li a:active {
 }
 .portfolio-modal .modal-content p.item-intro {
   margin: 20px 0 30px;
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Exo", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: italic;
   font-size: 16px;
 }
@@ -729,11 +771,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: #fed136;
+  background: #07874a;
 }
 ::selection {
   text-shadow: none;
-  background: #fed136;
+  background: #07874a;
 }
 img::selection {
   background: transparent;
@@ -742,5 +784,5 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: #fed136;
+  webkit-tap-highlight-color: #07874a;
 }
