--- a/less/agency.less
+++ b/less/agency.less
@@ -87,15 +87,14 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .navbar-brand {
-    position:relative;
-    padding: 0;
-    font-size: 18px;
-    line-height: 20px;
+    background-image: url(../img/logos/logo.png);
+    background-size: 100%;
+    position: relative;
+    margin-left: : 0px !important;
     top: -30px;
-    left: -15px;
     width: 150px;
-    height: 180px;
-    box-shadow: 4px 4px 2px #222;
+    height: 175px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .navbar-custom {
@@ -185,13 +184,9 @@ h1, h2, h3, h4, h5, h6 {
         .navbar-brand {
             font-size: 1.5em;
             width:115px;
-            height:143px;
+            height:134px;
             top:-10px;
-          .logo_overlay {
-            width:115px;
-            height:143px;
-            padding-top: 113px;
-          }
+            margin-left: 18px !important;
         }
     }
 }
@@ -235,8 +230,8 @@ header {
 @media(min-width:768px) {
     header {
         .intro-text {
-            padding-top: 300px;
-            padding-bottom: 200px;
+            padding-top: 150px;
+            padding-bottom: 100px;
             .intro-lead-in {
                 .serif-font;
 
@@ -254,22 +249,6 @@ header {
         }
     }
 }
-
-.logo_overlay {
-    background-image: url(../img/logos/circles_logo.jpg);
-    background-size: 100%;
-    position: relative;
-    width: 150px;
-    height: 180px;
-    //background-color: #fff;
-    //top: -30px;
-    //left: -15px;
-    z-index: -1;
-    border-bottom: 30px solid white;
-    padding-top: 150px;
-    padding-left: 13px;
-}
-
 
 // Global Section Styles
 
