--- a/css/agency.css
+++ b/css/agency.css
@@ -770,3 +770,10 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: #07874a;
 }
+.row-top-spacer {
+  margin-top: 40px;
+}
+.circles_highlight {
+  color: #07874a;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
