--- a/less/agency.less
+++ b/less/agency.less
@@ -769,3 +769,8 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: @theme-primary;
 }
+
+
+.row-top-spacer { margin-top:40px; }
+
+.circles_highlight { color:#07874a; font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;}
